[tool.poetry]
name = "hamza97"
version = "0.1.0"
description = "Watch Hamza videos withouth any distraction"
authors = ["Eliaz Bobadilla <ultirequiem@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapetube = "^2.3.1"
typer = "^0.7.0"
rich = "^13.3.1"
shellingham = "^1.5.0.post1"
pytube = "^12.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
